welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:32: error: expected start of definition
	override def run() { 
                 ^Methods:40: error: Unmatched closing brace '}' ignored here
}
^